# gcp-workshop-lab

./: .gitignore  README.md  pyproject.toml
resources/: 3_sales_schema.json  4_copy_customers_to_bq.sh  6_copy_sales_to_landing_bucket.sh  7_analytics_query.sql  analytics_query.sql  copy_customers_to_bq.sh  copy_customers_to_landing_bucket.sh  copy_sales_to_landing_bucket.sh  customers_schema.json  handle_sales_cloud_function.py
scripts/: fake_data_generator.py
